Merging Academics